--- a/product_contract/views/product_template.xml
+++ b/product_contract/views/product_template.xml
@@ -33,6 +33,7 @@
                         <group>
                             <field name="default_qty"/>
                             <field name="recurring_invoicing_type"/>
+                            <field name="recurring_interval"/>
                         </group>
                     </group>
                     <group>
